2008-06-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Remove the function to_ejabberd_short_jid/1.
	This is really an internal format and it doesn't belong to exmpp.

	* src/core/exmpp_iq.erl: Remove the function to_ejabberd_iq/1. As for
	to_ejabberd_short_jid, this is an internal format and ejabberd's jlib
	module is best suited for this purpose.

	* include/exmpp.hrl: Add a macro to test JIDs in guard expressions.

	* src/core/exmpp_stanza.erl: The functions that set the sender and the
	recipient now accept #jid as an argument.

	* src/server/exmpp_server_privacy.erl,
	src/client/exmpp_client_privacy.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am, ebin/exmpp.app.in,
	doc/Makefile.am: Add modules to read and create IQ for privacy list
	management.

	* src/core/exmpp_stream.erl: Add the function opening_reply/3 which is
	the same as opening_reply/2 but takes a language in 3rd argument.

	* src/core/exmpp_xml.erl (set_cdata_in_list): Accept atoms and
	integers as character data. The function converts them to binary.

	* src/core/exmpp_presence.erl: Add functions to simply create presence
	stanza. Add functions to change show, status or priority values. The
	API is not frozen.

	* src/server/exmpp_server_session.erl (want_establishment): Replace
	exceptions and 'ok' by bool().

	* src/server/exmpp_server_legacy_auth.erl: Add a function to tell if
	the peer wants to know the authentication fields.

	* src/core/exmpp_jid.erl: For JIDs, accept the empty string in
	argument but still use undefined in the #jid construction.

	* src/core/exmpp_presence.erl: Add a function probe/0.

	* src/client/exmpp_client_legacy_auth.erl: Export hex/1.

2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Add functions to convert to and from
	ejabberd normal and short JID forms.

	* src/core/exmpp_iq.erl: Add functions to convert to the ejabberd #iq
	record.
